--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Malia Eugenio</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- The website JavaScript file -->
-    <script src="/script.js" defer></script>
+    <script src="script/js" defer></script>
   </head>
   <body>
     <nav>
