--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/bakunawa.png?v=1744914327551" onclick="openImage(this)"></div>
         <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/game.png?v=1744913978722" onclick="openImage(this)"></div>
         <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/idk.png?v=1744914156712" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/idk.png?v=1744914156712" onclick="openImage(this)"></div>
       </div>
     
         <!-- Gallery Modal -->
