--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/shell.png?v=1745424823805" />
+    <link rel="icon" href="https://github.com/maleug/maliaeugenio/blob/main/images/me_icon.png?raw=true" />
 
     <title>Malia Eugenio</title>
 
