--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="content-img"><img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/laika.png?v=1744215537802" onclick="openImage(this)"></div>
         <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/tidepool.png?v=1745888329627" onclick="openImage(this)"></div>
         <div class="content-img" id="deer"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/ingydar.png?v=1746235130420" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="https://github.com/maleug/maliaeugenio/blob/main/images/HowToForget.png?raw=true" onclick="openImage(this)"></div>
         <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/window.gif?v=1744840869420" onclick="openImage(this)"></div>
         <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/you.png?v=1744914163054" onclick="openImage(this)"></div>
         <div class="content-img" id="cats"><img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/cats.png?v=1744228468903" onclick="openImage(this)"></div>
