--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav>
     <div class="logo">
-      <img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/logo.png?v=1744935758577"/>
+      <img src="https://github.com/maleug/maliaeugenio/blob/main/images/logo2.png?raw=true"/>
       
     </div> 
       <a href="https://www.linkedin.com/in/malia-eugenio-4716ab346" class="fa fa-linkedin fa-lg"></a>
