--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://github.com/maleug/maliaeugenio/blob/main/images/me_icon.png?raw=true" />
+    <link rel="icon" href="images/logo.png" />
 
     <title>Malia Eugenio</title>
 
