--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/logo.png" />
+    <link rel="icon" href="images/me_icon.png" />
 
     <title>Malia Eugenio</title>
 
@@ -18,7 +18,7 @@
   <body>
     <nav>
     <div class="logo">
-      <img src="https://github.com/maleug/maliaeugenio/blob/main/images/logo.png?raw=true"/>
+      <img src="images/logo.png"/>
       
     </div> 
       <a href="https://www.linkedin.com/in/malia-eugenio-4716ab346" class="fa fa-linkedin fa-lg"></a>
