--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/ME-GIF.gif?v=1744164156511"
              />
         <p class="popuptext" id="Popup">
-        My name is Malia Eugenio and I am an artist currently based in New York City. I specialize in whimsical character illustration and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane. I am also currently studying Illustration at the School of Visual Arts (SVA).
+        My name is Malia Eugenio and I am an illustrator currently based in New York City. I specialize in whimsical character art and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane. I am also currently studying Illustration at the School of Visual Arts (SVA).
         </p>
       </div>
     </aside>
@@ -78,7 +78,7 @@
           <img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/ME-GIF.gif?v=1744164156511"
           />
           <p class="aboutText" id="aboutTxt">
-            My name is Malia Eugenio and I am an artist currently based in New York City. I specialize in whimsical character illustration and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane! I am also currently studying Illustration at the School of Visual Arts (SVA).
+            My name is Malia Eugenio and I am an illustrator currently based in New York City. I specialize in whimsical character art and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane. I am also currently studying Illustration at the School of Visual Arts (SVA).
           </p>
         </div>
         </div>
