--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <aside>
       <div class="popup" id="me" onclick="popUp()">
-        <img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/ME-GIF.gif?v=1744164156511"
+        <img src="images/styling/me_gif.gif"
              />
         <p class="popuptext" id="Popup">
         My name is Malia Eugenio and I am an illustrator currently based in New York City. I specialize in whimsical character art and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane. I am also currently studying Illustration at the School of Visual Arts (SVA).
