--- a/index.html
+++ b/index.html
@@ -38,22 +38,18 @@
     
     <main> 
       <div class="image-gallery">
-        <div class="content-img"><img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/laika.png?v=1744215537802" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/tidepool.png?v=1745888329627" onclick="openImage(this)"></div>
-        <div class="content-img" id="deer"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/ingydar.png?v=1746235130420" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://github.com/maleug/maliaeugenio/blob/main/images/HowToForget.png?raw=true" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/window.gif?v=1744840869420" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/you.png?v=1744914163054" onclick="openImage(this)"></div>
-        <div class="content-img" id="cats"><img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/cats.png?v=1744228468903" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/jelly.gif?v=1744914080929" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/eden.png?v=1744914165098" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/mango.png?v=1744228411603" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/bus.png?v=1744215737763" onclick="openImage(this)"></div>
-        <div class="content-img" id="asterion"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/asterion.png?v=1744840869085" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.me/2e794bb1-3d79-4f7f-b685-47005b753467/horse.gif?v=1744914166527" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/bakunawa.png?v=1744914327551" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/game.png?v=1744913978722" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/idk.png?v=1744914156712" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/laika.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/tidepool.png" onclick="openImage(this)"></div>
+        <div class="content-img" id="deer"><img src="images/gallery/deer.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/forget.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/window.gif" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/tote.png" onclick="openImage(this)"></div>
+        <div class="content-img" id="cats"><img src="images/gallery/cats.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/horse.gif" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/huntress.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/room.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/office.png" onclick="openImage(this)"></div>
+        <div class="content-img" id="asterion"><img src="images/gallery/asterion.png" onclick="openImage(this)"></div>
       </div>
     
         <!-- Gallery Modal -->
