--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </div>
 
-      <img class="aboutme" id="aboutBtn" src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/aboutme.png?v=1745516765101"
+      <img class="aboutme" id="aboutBtn" src="images/styling/aboutme.png"
            onclick="aboutClick()">
 
         <!-- Modal 2 -->
@@ -71,7 +71,7 @@
         <div class="about-content" >
           <span class="close2" onclick="hideAbout()">&times; </span>
           <img class="about-content" id="img-content">
-          <img src="https://cdn.glitch.global/cd371df1-7ed0-4753-a2b8-fcb4650ce46c/ME-GIF.gif?v=1744164156511"
+          <img src="image/gallery/me_gif.gif"
           />
           <p class="aboutText" id="aboutTxt">
             My name is Malia Eugenio and I am an illustrator currently based in New York City. I specialize in whimsical character art and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane. I am also currently studying Illustration at the School of Visual Arts (SVA).
@@ -93,8 +93,8 @@
       <p2>
       This site is best viewed on desktop &amp from the comfort of your home.
       </p2> 
-      <img class="seeyou" src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/seeyou_light.png?v=1745512085953">
-      <img class="niceday" src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/niceday_light.png?v=1745512095721">
+      <img class="seeyou" src="images/styling/seeyou.png">
+      <img class="niceday" src="images/styling/niceday.png">
     </footer>
   </body>
 </html>
