--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <footer> 
      
       <div class="container">
-       <img class="dollar" src="https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/dollar.png?v=1745424834442">
+       <img class="dollar" src="gallery/styling/dollar.png">
       </div>
       
       <p>
