--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="about-content" >
           <span class="close2" onclick="hideAbout()">&times; </span>
           <img class="about-content" id="img-content">
-          <img src="image/styling/me_gif.gif"
+          <img src="images/styling/me_gif.gif"
           />
           <p class="aboutText" id="aboutTxt">
             My name is Malia Eugenio and I am an illustrator currently based in New York City. I specialize in whimsical character art and visual storytelling, and am endlessly inspired by everything from the colorful to the mundane. I am also currently studying Illustration at the School of Visual Arts (SVA).
@@ -83,7 +83,7 @@
     <footer> 
      
       <div class="container">
-       <img class="dollar" src="image/styling/dollar.png">
+       <img class="dollar" src="images/styling/dollar.png">
       </div>
       
       <p>
