--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="content-img"><img src="images/gallery/tote.png" onclick="openImage(this)"></div>
         <div class="content-img" id="cats"><img src="images/gallery/cats.png" onclick="openImage(this)"></div>
         <div class="content-img"><img src="images/gallery/horse.gif" onclick="openImage(this)"></div>
-        <div class="content-img"><img src="images/gallery/huntress.png" onclick="openImage(this)"></div>
+        <div class="content-img"><img src="images/gallery/jelly.gif" onclick="openImage(this)"></div>
         <div class="content-img"><img src="images/gallery/room.png" onclick="openImage(this)"></div>
         <div class="content-img"><img src="images/gallery/office.png" onclick="openImage(this)"></div>
         <div class="content-img" id="asterion"><img src="images/gallery/asterion.png" onclick="openImage(this)"></div>
